Completo resumen del libro 1

--- a/lp01.md
+++ b/lp01.md
@@ -4,3 +4,7 @@
 **Larry** es un niño huérfano que vive con su tíos,
 quierenes le tratan bastante mal (le hacen usar *Internet Explorer*).
 
+Un día aparece **Neo**, el de *Matrix* y le dice que puede ser un gran hacker.
+Así que lo saca de *Matrix* y se lo lleva a una escuela de hacking.
+
+Allí conoce a sus amigos **Rom** y **Versión**.
