Completo resumen del libro 2

--- a/lp02.md
+++ b/lp02.md
@@ -3,3 +3,4 @@
 Desde que en *Matrix* hubo un bug, la escuela se encuentra
  asediada por un virus contra el que **Larry** y sus amigos deberán luchar.
 
+El malvado hacker **Ballmemort** hirió a **Larry** dejándole una cicatriz de un *USB* en la frente.
