Avanzo resumen del libro 5

--- a/lp05.md
+++ b/lp05.md
@@ -1,3 +1,5 @@
 # Larry Plotter y La Orden de Unix
 
 El código de **Larry** se vuelve cada vez más peligroso.
+
+**Lord Ballmermort** y sus *followers* tienen cada vez mas *retweets* y poder.
