--- a/lp04.md
+++ b/lp04.md
@@ -2,3 +2,5 @@
 
 En una importante hackaton **Ballmermort** revienta el portátil 
 de un amigo de **Larry**.
+
+La batería estaba hecha en *Metrópolis*.
