--- a/lp05.md
+++ b/lp05.md
@@ -3,3 +3,7 @@
 El código de **Larry** se vuelve cada vez más peligroso.
 
 **Lord Ballmermort** y sus *followers* tienen cada vez mas *retweets* y poder.
+
+La **Orden de Unix* quiere enfrentarse a ellos
+y luchar por el bien del mundo.
+
